--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^9.121.5",
+    "@react-three/fiber": "^8.17.14",
+    "@shadcn/ui": "^0.0.4",
+    "autoprefixer": "^10.4.20",
+    "chart.js": "^4.4.8",
+    "framer-motion": "^12.4.2",
+    "framer-motion-3d": "^12.4.2",
+    "next": "15.1.7",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "recharts": "^2.15.1",
+    "three": "^0.173.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.2",
+    "tailwindcss": "^3.4.17"
   }
 }
